fixing layout issues on site

--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ img {
 .showcase {
     grid-area: showcase;
     min-height: 400px;
-    background: url(images/TIPS_for_men_v2.jpg);
+    background: url(images/IMG_4218.JPG);
     background-size: cover;
     background-position: center;
     padding: 3rem;
@@ -164,6 +164,30 @@ footer {
 @media(max-width: 700px) {
     .top-container {
         grid-template-areas:
-        ''
+        'showcase showcase'
+        'top-box-a top-box-b';
+    }
+}
+
+.showcase h1 {
+    font-size: 2.5rem;
+}
+
+.info {
+    grid-template-columns: 1fr;
+}
+
+.info .btn {
+    display: block;
+    text-align: center;
+    margin: auto;
+}
+
+@media(max-width: 500px) {
+    .top-container {
+        grid-template-areas:
+        'showcase'
+        'top-box-a'
+        'top-box-b';
     }
 }
